dernieres corrections contraste

--- a/style.css
+++ b/style.css
@@ -80,21 +80,6 @@ a:hover {
     background: top no-repeat;
 }
 
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.texture-paper::before {
-    background: url("img/texture-paper.webp");
-    background-size: 280px 280px;
-}
-
 .b-parallax {
     background-attachment: fixed;
 }
@@ -361,6 +346,41 @@ a:hover {
     position: relative;
     z-index: 2;
 }
+.accroche{
+    color: #333333;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 0 20%;
+}
+.citation{
+    color: #333333;
+    font-weight: bold;
+    font-size: 14px;
+    font-style: italic;
+}
+.citation_auteur{
+    color: #333333;
+    font-weight: 400;
+}
+.realisations{
+    color: #333333;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 0 30%;
+}
+.column-center{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.bc-blue{
+    background-color: #2a355b;
+    width: fit-content;
+}
+.txt-blue{
+color: #2a355b!important;
+}
 
 @media (min-width: 768px) {
     .site-navigation {
@@ -434,28 +454,7 @@ nav .caret {
     margin: 6px -5px 0 0!important;
     float: right;
 }
-.accroche{
-    color: #333333;
-    font-weight: bold;
-    font-size: 18px;
-    padding: 0 20%;
-}
-.citation{
-    color: #333333;
-    font-weight: bold;
-    font-size: 14px;
-    font-style: italic;
-}
-.citation_auteur{
-    color: #333333;
-    font-weight: 400;
-}
-.realisations{
-    color: #333333;
-    font-weight: bold;
-    font-size: 18px;
-    padding: 0 30%;
-}
+
 
 .mg-md {
     margin-top: 10px;
@@ -778,7 +777,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #2a355b;
     padding: 40px 40px 40px 40px;
 }
 
@@ -805,7 +804,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #2a355b!important;
 }
 
 .btn-atomic-tangerine:hover {
